# xdmusic

./: Makefile.am  Makefile.in  ProjectHome.md  README.md  aclocal.m4  configure  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  play.c  play.h  popmenu.c  popmenu.h  support.c  support.h  xfuns.c  xfuns.h
